# particles

./: CMakeLists.txt  README.md
src/: balls.h  grid.h  main.c  simulation.h  things.h
